--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://root:mysql@localhost:3306/stage_perfo
 # 是否开启追踪数据库的改变
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 # 打印数据库执行的语句
-SQLALCHEMY_ECHO = True
+SQLALCHEMY_ECHO = False
 
 # session秘钥相关配置
 SECRET_KEY = "a9sdjfas;jfq249rufalsdj;sdlnf;aw8uf.sdjfaisd"
